--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                             <div class="hero__caption">
                                 <span>Welcome To The </span>
-                                <h1 class="cd-headline letters scale">Hospital Of
+                                <h1 class="cd-headline letters scale">
                                     <strong class="cd-words-wrapper">
                                         <b class="is-visible">Kannu</b>
                                         <b>Priya</b>
