--- a/index.html
+++ b/index.html
@@ -543,9 +543,9 @@ ensuring comfort and confidence.".</p>
                                 <div class="col-lg-6 col-md-6 mb-30">
                                     <div class="select-itms">
                                         <select name="select" id="select2">
-                                            <option value="">Health Law</option>
+                                            <option value="">Kannu Priya Singh</option>
                                             <option value="">saiful islam</option>
-                                            <option value="">Arafath Miya</option>
+                                            <option value="">Shivam Kothekar</option>
                                             <option value="">Shakil Miya</option>
                                             <option value="">Tamim Sharker</option>
                                         </select>
@@ -708,8 +708,8 @@ ensuring comfort and confidence.".</p>
                                 <div class="footer-tittle">
                                     <h4>About Us</h4>
                                     <div class="footer-pera">
-                                        <p class="info1">his Website Created And Designed By Shivam Kothekar ,</p>
-                                        <p class="info1">or KPS Kannu Priya Singh Hospital , Which is a Virtual ( Future ) Hospital ..</p>
+                                        <p class="info1">This Website Created And Designed By Shivam Kothekar ,</p>
+                                        <p class="info1">for KPS Kannu Priya Singh Hospital , Which is a Virtual ( Future ) Hospital ..</p>
                                     </div>
                                 </div>
                             </div>
